docs: adds get opening documentation
